--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.8"
+requests = "^2.28.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
@@ -18,7 +19,7 @@ ipython = "^8.4.0"
 pytest-cov = "^3.0.0"
 
 [tool.poetry.scripts]
-gendiff = "page_loader.scripts.main:main"
+page-loader = "page_loader.scripts.main:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
