--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [
 [tool.poetry.dependencies]
 python = "^3.8"
 requests = "^2.28.1"
+beautifulsoup4 = "^4.11.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
@@ -18,6 +19,8 @@ flake8 = "^5.0.4"
 ipython = "^8.4.0"
 pytest-cov = "^3.0.0"
 requests-mock = "^1.9.3"
+jupyter = "^1.0.0"
+notebook = "^6.4.12"
 
 [tool.poetry.scripts]
 page-loader = "page_loader.scripts.main:main"
