refactor download, test added

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ enable-extensions = G
 isort-show-traceback = True
 ignore = 
 per-file-ignores =
-exclude = .venv, .github, .pytest_cache, .coverage
+exclude = .venv, .github, .pytest_cache, .coverage, tests/fixtures
 
 [tool:pytest]
 norecursedirs = __pycache__
