--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,7 @@ exclude = .venv, .github, .pytest_cache, .coverage, tests/fixtures
 [tool:pytest]
 norecursedirs = __pycache__
 addopts = --strict-markers
+log_cli = True
 
 [isort]
 # See https://github.com/timothycrosley/isort#multi-line-output-modes
