--- a/setup.cfg
+++ b/setup.cfg
@@ -18,6 +18,7 @@ exclude = .venv, .github, .pytest_cache, .coverage, tests/fixtures
 norecursedirs = __pycache__
 addopts = --strict-markers
 log_cli = True
+log_level = DEBUG
 
 [isort]
 # See https://github.com/timothycrosley/isort#multi-line-output-modes
