--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ packages = [
 python = "^3.8"
 requests = "^2.28.1"
 beautifulsoup4 = "^4.11.1"
+tqdm = "^4.64.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
